# FaceRecognition

./: .gitignore  CMakeLists.txt  Project.cpp  Project.vcxproj  Project.vcxproj.filters  lbp-results.txt
ECSE415-Project/: ECSE415-Project.vcxproj  ECSE415-Project.vcxproj.filters  Source.cpp  bagofwords.cpp  eigenfaces.cpp  eigenfaces.h  lbp.cpp  lbp.h  main.cpp  util.cpp  util.h
XCodeProject/FaceRec/: libopencv_calib3d.2.4.11.dylib  libopencv_core.2.4.11.dylib  libopencv_features2d.2.4.11.dylib  libopencv_highgui.2.4.11.dylib  libopencv_imgproc.2.4.11.dylib  libopencv_nonfree.2.4.11.dylib  libopencv_stitching.2.4.11.dylib
XCodeProject/FaceRec/FaceRec/: eigenfaces.cpp  eigenfaces.h  main.cpp
XCodeProject/FaceRec/FaceRec.xcodeproj/: project.pbxproj
XCodeProject/FaceRec/FaceRec.xcodeproj/project.xcworkspace/xcuserdata/Weili.xcuserdatad/: UserInterfaceState.xcuserstate
XCodeProject/FaceRec/FaceRec.xcodeproj/xcuserdata/Weili.xcuserdatad/xcschemes/: FaceRec.xcscheme  xcschememanagement.plist
